--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -88,7 +88,7 @@
                 <archive>
                     <manifest>
                         <addClasspath>true</addClasspath>
-                        <mainClass>at.ac.tuwien.sepm2011ws.mp3player.App</mainClass>
+                        <mainClass>at.ac.tuwien.sepm2011ws.mp3player.Main</mainClass>
                     </manifest>
                 </archive>
                 <descriptorRefs>
