--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -78,6 +78,11 @@
         <version>1.2.16</version>
     </dependency>
 
+  	<dependency>
+  		<groupId>postgresql</groupId>
+  		<artifactId>postgresql</artifactId>
+  		<version>9.1-901.jdbc4</version>
+  	</dependency>
   </dependencies>
   <build>
   	<plugins>
