--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -77,12 +77,17 @@
         <artifactId>log4j</artifactId>
         <version>1.2.16</version>
     </dependency>
-
   	<dependency>
   		<groupId>postgresql</groupId>
   		<artifactId>postgresql</artifactId>
   		<version>9.1-901.jdbc4</version>
   	</dependency>
+   <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+      <version>3.0.0.RELEASE</version>
+      <scope>runtime</scope>
+   </dependency>
   </dependencies>
   <build>
   	<plugins>
