--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -114,6 +114,11 @@
                 </execution>
             </executions>
   		</plugin>
+  		<plugin>
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-resources-plugin</artifactId>
+  			<version>2.5</version>
+  		</plugin>
   	</plugins>
   </build>
 </project>
