--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -82,12 +82,16 @@
   		<artifactId>postgresql</artifactId>
   		<version>9.1-901.jdbc4</version>
   	</dependency>
-   <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>3.0.0.RELEASE</version>
-      <scope>runtime</scope>
-   </dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-beans</artifactId>
+  		<version>3.0.6.RELEASE</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.springframework</groupId>
+  		<artifactId>spring-context</artifactId>
+  		<version>3.0.6.RELEASE</version>
+  	</dependency>
   </dependencies>
   <build>
   	<plugins>
