--- a/mp3player/.classpath
+++ b/mp3player/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" path="src/main/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/last.fm-bindings-0.1.0.jar" sourcepath="lib/last.fm-bindings-0.1.0.zip"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
