changed java version to 1.7

--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -97,7 +97,7 @@
 			<artifactId>jmf</artifactId>
 			<version>2.1.1e</version>
 		</dependency>
-  </dependencies>
+	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
@@ -136,6 +136,15 @@
 					<formats>
 						<format>html</format>
 					</formats>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.7</source>
+					<target>1.7</target>
 				</configuration>
 			</plugin>
 		</plugins>
