--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -124,6 +124,11 @@
 			<artifactId>bindings</artifactId>
 			<version>0.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>commons-configuration</groupId>
+			<artifactId>commons-configuration</artifactId>
+			<version>1.7</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
