--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -129,6 +129,12 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>1.7</version>
 		</dependency>
+
+		<dependency>
+			<groupId>net.sourceforge.lizzy</groupId>
+			<artifactId>lizzy-1.1.1</artifactId>
+			<version>1.1.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
