--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -129,11 +129,20 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>1.7</version>
 		</dependency>
-
 		<dependency>
 			<groupId>net.sourceforge.lizzy</groupId>
 			<artifactId>lizzy-1.1.1</artifactId>
 			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode</groupId>
+			<artifactId>starrating</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.chartlyrics</groupId>
+			<artifactId>jchartlyrics</artifactId>
+			<version>1.0</version>
 		</dependency>
 	</dependencies>
 	<build>
