--- a/mp3player/.classpath
+++ b/mp3player/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="src" output="target/test-classes" path="src/test/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/UncleSam/Documents/TU Wien/WS11/SEPM/Workspace/qse-sepm-ws11-08/mp3player/lib/com/googlecode/starrating/1.0/SStarRating-v1.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
