--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>at.ac.tuwien.sepm2011ws</groupId>
 	<artifactId>mp3player</artifactId>
-	<version>0.0.1</version>
+	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<developers>
@@ -156,6 +156,11 @@
 		</dependency>
 	</dependencies>
 	<build>
+		<testResources>
+			<testResource>
+				<directory>src/main/resources</directory>
+			</testResource>
+		</testResources>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
