--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -120,11 +120,6 @@
 			<version>1.2.0</version>
 		</dependency>
 		<dependency>
-			<groupId>last.fm</groupId>
-			<artifactId>bindings</artifactId>
-			<version>0.1.0</version>
-		</dependency>
-		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 			<version>1.7</version>
@@ -154,11 +149,31 @@
 			<artifactId>castor</artifactId>
 			<version>1.2</version>
 		</dependency>
+		<!-- 
+		<dependency>
+			<groupId>com.ldodds</groupId>
+			<artifactId>musicbrainz</artifactId>
+			<version>beta-2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hp.hpl.jena</groupId>
+			<artifactId>jena</artifactId>
+			<version>2.6.4</version>
+		</dependency>
+		 -->
+		<dependency>
+			<groupId>de.umass</groupId>
+			<artifactId>lastfm</artifactId>
+			<version>0.1.1</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
 			<testResource>
 				<directory>src/main/resources</directory>
+			</testResource>
+			<testResource>
+				<directory>src/test/resources</directory>
 			</testResource>
 		</testResources>
 		<plugins>
