--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -166,6 +166,11 @@
 			<artifactId>lastfm</artifactId>
 			<version>0.1.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>1.3.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<testResources>
