--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -149,18 +149,7 @@
 			<artifactId>castor</artifactId>
 			<version>1.2</version>
 		</dependency>
-		<!-- 
-		<dependency>
-			<groupId>com.ldodds</groupId>
-			<artifactId>musicbrainz</artifactId>
-			<version>beta-2</version>
-		</dependency>
-		<dependency>
-			<groupId>com.hp.hpl.jena</groupId>
-			<artifactId>jena</artifactId>
-			<version>2.6.4</version>
-		</dependency>
-		 -->
+
 		<dependency>
 			<groupId>de.umass</groupId>
 			<artifactId>lastfm</artifactId>
@@ -171,6 +160,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
 	</dependencies>
 	<build>
 		<testResources>
