--- a/mp3player/pom.xml
+++ b/mp3player/pom.xml
@@ -165,7 +165,17 @@
             <artifactId>spring-jdbc</artifactId>
             <version>3.0.5.RELEASE</version>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+            <version>3.0.5.RELEASE</version>
+        </dependency>
+    </dependencies>
 	<build>
 		<testResources>
 			<testResource>
